--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scambino · JSON 對話助手</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=arrow_forward" />
 </head>
 <body>
   <header>
+    <img src="img/bot.png" alt="Scambino Logo" class="logo" />
     <h2>Scambino</h2>
     <button id="settingsBtn" class="icon-btn" aria-label="設定">
       <!-- gear icon (SVG) -->
@@ -22,9 +24,12 @@
   </main>
 
   <footer class="composer">
-    <textarea id="userInput" placeholder="輸入訊息（按按鈕送出；Enter 只換行）"></textarea>
-    <button id="sendBtn" class="btn primary">送出</button>
-    <button id="clearBtn" class="btn">清空</button>
+    <textarea id="userInput" class="userInput" row="1" placeholder="輸入訊息（按按鈕送出；Enter 只換行）"></textarea>
+    <button id="sendBtn" class="btn-primary">
+      <span class="material-symbols-outlined">
+        arrow_forward
+      </span>
+    </button>
   </footer>
 
   <!-- 設定面板（收合在齒輪內） -->
